event caption alignment fix

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -643,7 +643,7 @@ h3.smaller{font-size: 1.2rem}
 		}
 	}
 	.caption{
-		padding-top: 1.65rem;
+		padding-top: 1.3rem;
 		padding-bottom: 1rem;
 		height: 4.5rem;
 		p{
